# arm-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  dashboard_qa_report.html  docker-compose.yml  pyproject.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_create_tables.py  002_add_date_inferred.py  003_add_ingest_manifest.py  004_ingest_job_concurrency_guard.py  005_add_message_feedback.py  006_add_restaurant_credential.py  007_add_ingest_resumability.py  008_add_correction_vote_audit.py  009_add_session_summary_progress.py
docs/: architecture.md  architecture_diagram.html  evaluation_report.md  runbook.md
frontend/: .env.example  ai-chatbot-icon.avif  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/prometheus/: prometheus.yml
prompts/files/: chat_response_complex.yaml  chat_response_simple.yaml  conversation_recall.yaml  query_decomposition.yaml  session_summary.yaml
scripts/: create_restaurant_credential.py  seed.py  smoke_test.py
src/: config.py
src/api/: dependencies.py  main.py  rate_limit.py
src/core/: anomaly.py  chunking.py  correction.py  crisis_guardrail.py  decomposition.py  generation.py  groundedness.py  guardrail.py  ranking.py  report.py  reranker.py  retrieval.py  review_stats.py  semantic_cache.py  session.py
src/models/: db_entities.py  schemas.py
src/services/: cache.py  database.py  prompt_service.py
src/utils/: background.py  circuit_breaker.py  cost_tracker.py  logging.py  metrics.py  restaurant_auth.py  retry.py  security.py  tracing.py  (+1 more)
tests/: conftest.py
(+93 files in other folders)
