[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arm-chatbot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "qdrant-client>=1.10",
    "fastembed>=0.4",
    "openai>=1.40",
    "groq>=0.11",
    "redis[hiredis]>=5.0",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "pybreaker>=1.2",
    "slowapi>=0.1",
    "tiktoken>=0.7",
    "nltk>=3.9",
    "langdetect>=1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pre-commit>=3.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pip-audit>=2.7",
    "bandit>=1.8",
    "factory-boy>=3.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ""
markers = [
    "llm: requires live LLM API keys (excluded from fast CI)",
    "integration: requires running Docker services",
    "e2e: requires full docker-compose stack",
    "performance: latency budget tests",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]
omit = ["src/utils/logging.py"]
